docs/book/samples/ch04/railway.out
error[endpoint]: unhandled err reached main: "division by zero"
  born in subtotal at railway.kso:9
  passed through receipt ← with_tip
